# yeomil-mono

./: .gitignore  LICENSE  Makefile  README.ko.md  README.md  download_upstream.py  install.ps1  install.sh  package.json  pyproject.toml
.github/workflows/: pages.yml  release.yml
Casks/: font-yeomil-mono.rb
docs/: index.html  script.js
scripts/: build-nerd-fonts.sh
src/yeomil_mono/: __init__.py  builder.py  cli.py
tests/: __init__.py  test_builder.py
