[project]
name = "yeomil-mono"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "taevel02", email = "taevel02@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "brotli>=1.2.0",
    "fonttools>=4.63.0",
]

[project.scripts]
yeomil-mono = "yeomil_mono:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "pyrefly>=1.0.0",
    "ruff>=0.15.16",
]
test = [
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest]
addopts = ["--tb=short"]

[tool.pyrefly]
check-unannotated-defs = true

